# test-matsuzawa-20251218-3

./: pyproject.toml
.research/: research_history.json
.research/results/: stderr.txt  stdout.txt
config/: config.yaml
config/runs/: comparative-1-resnet20-cifar10.yaml  proposed-resnet20-cifar10.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
